  and will terminate with a fatal error:

	fatal error in <...>/main.zeek, line 425: Cluster::node set to 'worker-1', but Cluster::backend is Cluster::CLUSTER_BACKEND_NONE - please select a cluster backend to use.

  If you used Zeekctl on a single physical system or virtual machine previously,
  this should all be transparent to you.

- Python 3.10 is now required for Zeek and all of its associated subprojects.

- The ``&optional`` script attribute will now error when applied to anything that's
  not a record field. Previously, this would have surprising behavior.

- The BinPAC, Bifcl, and Gen-ZAM tools have all moved directly into the Zeek repo, which
  should ease maintenance on them a bit. They were moved from the ``auxil`` directory to the
  tools directory. Along with this, the ``--gen-zam`` argument for ``configure`` was
  removed and the internal version will always be used.

- The zeek-af_packet-plugin git submodule was moved directly into the Zeek repo. This used
  to live in the ``auxil`` directory, after having moved there from an external plugin.
  It is now built as part of main Zeek build whenever building on Linux.

- The global ``g_frame_stack`` C++ variable was removed. This variable was used to track
  the current stack of script-function frames, mostly for the built-in script debugger. We
  realized that we were also tracking this information in the global ``call_stack``
  variable, used by the script profiler. These two have now been combined together into
  ``call_stack``. Plugins using ``g_frame_stack`` will need to be adapted to use the other
  variable. We opted to not use a deprecation cycle for this due to the complication with
  managing the data across both variables.

- The `unique_id` and `unique_id_from` BIFs now return 96-bit UIDs, which makes them
  consistent with other UIDs created by Zeek such as connection IDs. They were previously
  returning shorter 64-bit UIDs.
