@@ -1,0 +1,4 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+warning in <...>/table-errors.zeek, line 27: Remove in v9.1: Use explicit Cluster::publish() or the storage framework to distribute or persist state.
+warning in <...>/table-errors.zeek, line 29: Remove in v9.1: Use explicit Cluster::publish() or the storage framework to distribute or persist state.
+received termination signal
