@@ -1,0 +1,5 @@
+### BTest baseline data generated by btest-diff. Do not edit. Use "btest -U/-u" to update. Requires BTest >= 0.63.
+warning in <...>/table-errors.zeek, line 27: Remove in v9.1: Use explicit Cluster::publish() or the storage framework to distribute or persist state.
+warning in <...>/table-errors.zeek, line 29: Remove in v9.1: Use explicit Cluster::publish() or the storage framework to distribute or persist state.
+error in <...>/table-errors.zeek, line 27: table Test::tbl2 uses Broker-specific attribute &backend, but non-Broker backend Cluster::CLUSTER_BACKEND_ZEROMQ selected (Test::tbl2)
+error in <...>/table-errors.zeek, line 29: table Test::tbl3 uses Broker-specific attribute &broker_store, but non-Broker backend Cluster::CLUSTER_BACKEND_ZEROMQ selected (Test::tbl3)
